FONT SPACING AND BUTTON HOVER FIXED

--- a/src/components/ProductDetail/AdditionalInfoBlock/additionalInfoBlock.module.css
+++ b/src/components/ProductDetail/AdditionalInfoBlock/additionalInfoBlock.module.css
@@ -51,11 +51,13 @@
   font-size: var(--font-size-xs-ext);
   font-weight: var(--font-wt-thin);
   min-width: 30%;
+  letter-spacing: 0.5px;
 }
 .itemVal {
   width: 100%;
   font-size: var(--font-size-xs-ext);
   font-weight: var(--font-wt-thin);
+  letter-spacing: 0.5px;
 }
 .tableItemAlt {
   width: 100%;
@@ -113,4 +115,5 @@
 }
 .brochureText {
   font-size: var(--font-size-xs);
+  letter-spacing: 0.5px;
 }
